2009-07-31  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_vpn_pref_dialog.c: 
	  Fix defect#10335, where start/stop buttons were seen to be active to
	  conditionally activated ENMs. Also fixed a validation error when
	  doing update_obj.
	* tests/main.c: 
	  Add scan results to tests.

2009-07-30  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.ui:
	  Re-merge some missing elements like NwamTreeViews and response
	  codes.
	* capplet/nwam_conn_conf_ip_panel.c:
	  Fix bug#10302 where incorrect validation was being applied for IPv6
	  entries. Also fixed looping notifications when changing some ipv6
	  elements.
	  Fix bug#10296 where multiple entries didn't correctly set DHCP or
	  not flag causing the setting of an address to fail.
	* common/nwamui_object.h, common/nwamui_object.c: 
	  Add some state caching - at lot of the time we get the updates from
	  nwamd, so we don't need to immediately seek them again, but there is
	  a timeout to try refresh the state if called again after 60 seconds.
	  Added nwamui_object_set_nwam_state() to allow NwamuiDaemon to set it
	  when it sees the events and updated nwamui_object_get_nwam_state()
	  to use the cached information if available.
	  Fixes defect#9848.
	* common/nwamui_ncp.h, common/nwamui_ncp.c: 
	  Add caching of the priority group, and adding a function 
	  nwamui_ncp_set_current_prio_group() to enable setting on receipt of
	  an event. Updated nwamui_ncp_get_current_prio_group() to use cached
	  value, if it's not been too long since updated.
	* common/nwamui_daemon.c: 
	  Ahen we get object state changes, set this information in the
	  NwamuiObject. Also update the active_ncp's priority group when we
	  see such an event.
	* common/nwamui_ncu.c: 
	  Add to nwamui_ncu_get_connection_state_string to set the wifi_info
	  object if it sees that it's NULL yet we're connected.
	* daemon/status_icon.c: 
	  Don't generate an event on wireless connect, only when finally have
	  address.
